mostly done, options not working still

--- a/.env
+++ b/.env
@@ -19,12 +19,16 @@ TIMEZONE=America/Los_Angeles
 QUIET_HOURS=23:00-07:00
 ALERT_COOLDOWN_MIN=30
 
+ALPACA_KEY_ID=PK1QRTUCV1G4ND1IQ2BP
+ALPACA_SECRET_KEY=rU456PxSc2giAiOQv0eJdDwzieliBS6gyqctygb5
+APCA_API_BASE_URL=https://paper-api.alpaca.markets
+
 OPTIONS_ENABLED=1
 OPTIONS_STYLE=atm_plusminus1
 OPTIONS_EXPIRY_DAYS=5
 OPTIONS_SYMBOLS=NVDA
 
-ITAD_API_KEY=
+ITAD_KEY=a9a73d6b3dfad99a39308b7a688c487e7cac906a
 ITAD_REGION=us
 ITAD_COUNTRY=US
 ITAD_SHOPS=steam,epic,gog,ubisoft,origin,humblestore,greenmangaming,fanatical
